small bug fixed

--- a/Boosting.ipynb
+++ b/Boosting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -21,6 +21,7 @@
     "import matplotlib.pylab as pl\n",
     "import sklearn.cross_validation as cv\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from DecisionTree import DecisionTree\n",
     "# Plotting config\n",
     "%pylab inline"
@@ -28,36 +29,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "FOLDER = \"data/\"\n",
-    "FILE = \"iris.txt\"\n",
-    "df = pd.read_csv(FOLDER+FILE, sep=\",\", header=None)#, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)\n",
-    "#test_df = df = pd.read_csv(\"spam.test.txt\", sep=\" \", header=None)#, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)"
+    "FILES = [\"iris.txt\", \"bezdekIris.txt\", \"wine.txt\", \"bupa.txt\"]\n",
+    "FILE = FILES[2]\n",
+    "df = pd.read_csv(FOLDER+FILE, sep=\",\", header=None)#, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Подготавливаем признаки и целевую функцию\n",
-    "if (FILE == \"iris.txt\"):\n",
+    "if FILE in FILES[:2]:\n",
+    "    # ИРИСЫ\n",
     "    df[4] = pd.factorize(df[4])[0]\n",
     "    X = df[[0,1,2,3]].as_matrix()\n",
-    "    y = df[4].as_matrix()"
+    "    y = df[4].as_matrix()\n",
+    "    \n",
+    "if FILE in FILES[2]:\n",
+    "    x_indexes = [x for x in range(1,14)]\n",
+    "    X = df[x_indexes].as_matrix()\n",
+    "    y = df[0].as_matrix()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -77,37 +84,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.789473684211\n"
+      "0.911111111111\n",
+      "CPU times: user 196 ms, sys: 15 µs, total: 196 ms\n",
+      "Wall time: 196 ms\n"
      ]
     }
    ],
    "source": [
-    "tree = DecisionTree()\n",
-    "tree.fit(x_train, y_train)\n",
-    "y_predicted = tree.predict(x_test)\n",
+    "%%time\n",
+    "my_tree = DecisionTree()\n",
+    "my_tree.fit(x_train, y_train)\n",
+    "y_predicted = my_tree.predict(x_test)\n",
     "print accuracy_score(y_test, y_predicted)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 1, 2, 1, 1, 0, 1, 0, 2, 2, 2, 2, 0, 1, 2, 2, 1, 2, 2, 0, 2, 1,\n",
-       "       1, 0, 0, 0, 2, 0, 1, 0, 1, 2, 2, 2, 2, 1, 2])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.866666666667\n",
+      "CPU times: user 3.07 ms, sys: 0 ns, total: 3.07 ms\n",
+      "Wall time: 5.19 ms\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "%%time\n",
+    "sklearn_tree = DecisionTreeClassifier(random_state=True)\n",
+    "sklearn_tree.fit(x_train, y_train)\n",
+    "y_predicted = sklearn_tree.predict(x_test)\n",
+    "print accuracy_score(y_test, y_predicted)"
+   ]
   }
  ],
  "metadata": {
