--- a/Boosting.ipynb
+++ b/Boosting.ipynb
@@ -29,53 +29,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "FOLDER = \"data/\"\n",
-    "FILES = [\"iris.txt\", \"bezdekIris.txt\", \"wine.txt\", \"bupa.txt\"]\n",
-    "FILE = FILES[2]\n",
-    "df = pd.read_csv(FOLDER+FILE, sep=\",\", header=None)#, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)"
+    "FILES = [\"iris.txt\", \"bezdekIris.txt\", \"wine.txt\", \"bupa.txt\", \"spam\"]\n",
+    "FILE = FILES[4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Подготавливаем признаки и целевую функцию\n",
-    "if FILE in FILES[:2]:\n",
-    "    # ИРИСЫ\n",
-    "    df[4] = pd.factorize(df[4])[0]\n",
-    "    X = df[[0,1,2,3]].as_matrix()\n",
-    "    y = df[4].as_matrix()\n",
+    "if FILE in FILES[:4]:\n",
     "    \n",
-    "if FILE in FILES[2]:\n",
-    "    x_indexes = [x for x in range(1,14)]\n",
-    "    X = df[x_indexes].as_matrix()\n",
-    "    y = df[0].as_matrix()"
+    "    df = pd.read_csv(FOLDER+FILE, sep=\",\", header=None)#, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)\n",
+    "    \n",
+    "    if FILE in FILES[:2]:\n",
+    "        # ИРИСЫ\n",
+    "        df[4] = pd.factorize(df[4])[0]\n",
+    "        X = df[[0,1,2,3]].as_matrix()\n",
+    "        y = df[4].as_matrix()\n",
+    "\n",
+    "    if FILE == FILES[2]:\n",
+    "        x_indexes = [x for x in range(1,14)]\n",
+    "        X = df[x_indexes].as_matrix()\n",
+    "        y = df[0].as_matrix()\n",
+    "\n",
+    "    if FILE == FILES[3]:\n",
+    "        X = df[[0,1,2,3,4,5]].as_matrix()\n",
+    "        y = df[6]\n",
+    "\n",
+    "    x_train, x_test, y_train, y_test = cv.train_test_split(X, y, test_size=0.25)\n",
+    "\n",
+    "else:\n",
+    "    \n",
+    "    df_train = pd.read_csv(FOLDER+FILE+\".train.txt\", sep=\" \", header=None)#, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)\n",
+    "    df_test = pd.read_csv(FOLDER+FILE+\".test.txt\", sep=\" \", header=None)#, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)\n",
+    "    x_train = df_train[df_train.columns[1:]]\n",
+    "    y_train = df_train[df_train.columns[0]]\n",
+    "    x_test = df_test[df_test.columns[1:]]\n",
+    "    y_test = df_test[df_test.columns[0]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "x_train, x_test, y_train, y_test = cv.train_test_split(X, y, test_size=0.25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -84,9 +91,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.911111111111\n",
-      "CPU times: user 196 ms, sys: 15 µs, total: 196 ms\n",
-      "Wall time: 196 ms\n"
+      "0.973684210526\n",
+      "CPU times: user 80 ms, sys: 73 µs, total: 80 ms\n",
+      "Wall time: 79.5 ms\n"
      ]
     }
    ],
@@ -100,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -109,15 +116,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.866666666667\n",
-      "CPU times: user 3.07 ms, sys: 0 ns, total: 3.07 ms\n",
-      "Wall time: 5.19 ms\n"
+      "0.808174224344\n",
+      "CPU times: user 67.4 ms, sys: 3.45 ms, total: 70.9 ms\n",
+      "Wall time: 69.8 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "sklearn_tree = DecisionTreeClassifier(random_state=True)\n",
+    "sklearn_tree = DecisionTreeClassifier(splitter='random')\n",
     "sklearn_tree.fit(x_train, y_train)\n",
     "y_predicted = sklearn_tree.predict(x_test)\n",
     "print accuracy_score(y_test, y_predicted)"
