change split_quantitative method

--- a/Boosting.ipynb
+++ b/Boosting.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -74,15 +74,15 @@
     "    \n",
     "    df_train = pd.read_csv(FOLDER+FILE+\".train.txt\", sep=\" \", header=None)#, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)\n",
     "    df_test = pd.read_csv(FOLDER+FILE+\".test.txt\", sep=\" \", header=None)#, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)\n",
-    "    x_train = df_train[df_train.columns[1:]]\n",
-    "    y_train = df_train[df_train.columns[0]]\n",
-    "    x_test = df_test[df_test.columns[1:]]\n",
-    "    y_test = df_test[df_test.columns[0]]"
+    "    x_train = df_train[df_train.columns[1:]].as_matrix()\n",
+    "    y_train = df_train[df_train.columns[0]].as_matrix()\n",
+    "    x_test = df_test[df_test.columns[1:]].as_matrix()\n",
+    "    y_test = df_test[df_test.columns[0]].as_matrix()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -91,9 +91,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.973684210526\n",
-      "CPU times: user 80 ms, sys: 73 µs, total: 80 ms\n",
-      "Wall time: 79.5 ms\n"
+      "0.790672235481\n",
+      "CPU times: user 37.6 s, sys: 4.08 ms, total: 37.6 s\n",
+      "Wall time: 37.6 s\n"
      ]
     }
    ],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -116,9 +116,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.808174224344\n",
-      "CPU times: user 67.4 ms, sys: 3.45 ms, total: 70.9 ms\n",
-      "Wall time: 69.8 ms\n"
+      "0.843973747017\n",
+      "CPU times: user 66.3 ms, sys: 0 ns, total: 66.3 ms\n",
+      "Wall time: 65.4 ms\n"
      ]
     }
    ],
