--- a/Boosting.ipynb
+++ b/Boosting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false
    },
@@ -40,21 +40,32 @@
    "source": [
     "FOLDER = \"data/\"\n",
     "FILES = [\n",
-    "        \"iris.txt\", \"bezdekIris.txt\", \"wine.txt\", \"bupa.txt\", \"housing.txt\", \"spam\"\n",
+    "        \"iris.txt\", \"bezdekIris.txt\", \"wine.txt\", \"bupa.txt\", \"housing.txt\", \"auto-mpg.txt\", \"spam\"\n",
     "        ]\n",
-    "FILE = \"housing.txt\""
+    "FILE = \"spam\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(FOLDER+FILE, sep=\" \", header=None)#, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Подготавливаем признаки и целевую функцию\n",
-    "if FILE in FILES[:5]:\n",
+    "if FILE in FILES[:6]:\n",
     "    \n",
     "    df = pd.read_csv(FOLDER+FILE, sep=\",\", header=None)#, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)\n",
     "    \n",
@@ -76,6 +87,11 @@
     "    if FILE == FILES[4]:\n",
     "        df = pd.read_csv(FOLDER+FILE, sep=\" \", header=None)#, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)\n",
     "        X = df[df.columns[1:]].as_matrix()\n",
+    "        y = df[df.columns[0]].as_matrix()\n",
+    "        \n",
+    "    if FILE == FILES[5]:\n",
+    "        df = pd.read_csv(FOLDER+FILE, sep=\" \", header=None)#, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)\n",
+    "        X = df[df.columns[1:-1]].as_matrix()\n",
     "        y = df[df.columns[0]].as_matrix()\n",
     "        \n",
     "    x_train, x_test, y_train, y_test = cv.train_test_split(X, y, test_size=0.25)\n",
@@ -204,21 +220,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "51.243527306\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "my_gb = myGB(n_estimators=200, max_depth=2, shrinkage=0.25, max_steps=None)\n",
+    "%%time\n",
+    "\n",
+    "my_gb = myGB(n_estimators=250, max_depth=5, shrinkage=0.2, max_steps=50, max_features=15)\n",
     "my_gb.fit(x_train, y_train)\n",
     "y_predicted = my_gb.predict(x_test)\n",
     "print mse(y_test, y_predicted)"
@@ -226,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 200,
    "metadata": {
     "collapsed": false
    },
@@ -235,12 +245,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55.6887868381\n"
+      "0.0648069481612\n",
+      "CPU times: user 10.4 s, sys: 0 ns, total: 10.4 s\n",
+      "Wall time: 10.4 s\n"
      ]
     }
    ],
    "source": [
-    "gb = GradientBoostingRegressor(n_estimators=200, random_state=np.random, max_depth=2)\n",
+    "%%time\n",
+    "\n",
+    "gb = GradientBoostingRegressor(n_estimators=250, max_depth=5)\n",
     "gb.fit(x_train, y_train)\n",
     "y_predicted = gb.predict(x_test)\n",
     "print mse(y_test, y_predicted)"
