--- a/Boosting.ipynb
+++ b/Boosting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -42,23 +42,12 @@
     "FILES = [\n",
     "        \"iris.txt\", \"bezdekIris.txt\", \"wine.txt\", \"bupa.txt\", \"housing.txt\", \"auto-mpg.txt\", \"spam\"\n",
     "        ]\n",
-    "FILE = \"spam\""
+    "FILE = \"housing.txt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(FOLDER+FILE, sep=\" \", header=None)#, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -129,11 +118,10 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "for i in range(10):\n",
-    "    my_tree = DecisionTree(max_features=20, min_samples_leaf=5, max_steps=100)\n",
-    "    my_tree.fit(x_train, y_train)\n",
-    "    y_predicted = my_tree.predict(x_test)\n",
-    "    print accuracy_score(y_test, y_predicted)"
+    "my_tree = DecisionTree(max_features=20, min_samples_leaf=2, max_steps=None, rsm=False)\n",
+    "my_tree.fit(x_train, y_train)\n",
+    "y_predicted = my_tree.predict(x_test)\n",
+    "print accuracy_score(y_test, y_predicted)"
    ]
   },
   {
@@ -145,7 +133,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "sklearn_tree = DecisionTreeClassifier(splitter='random')\n",
+    "sklearn_tree = DecisionTreeClassifier()\n",
     "sklearn_tree.fit(x_train, y_train)\n",
     "y_predicted = sklearn_tree.predict(x_test)\n",
     "print accuracy_score(y_test, y_predicted)"
@@ -160,29 +148,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "69.7522712532\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/popka/anaconda/lib/python2.7/site-packages/numpy/core/_methods.py:59: RuntimeWarning: Mean of empty slice.\n",
-      "  warnings.warn(\"Mean of empty slice.\", RuntimeWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "my_tree = DecisionTree(is_classification=False, max_features=len(x_train[0]), max_steps=None)\n",
+    "my_tree = DecisionTree(is_classification=False, rsm=True, max_steps=None)\n",
     "my_tree.fit(x_train, y_train)\n",
     "y_predicted = my_tree.predict(x_test)\n",
     "print mse(y_test, y_predicted)"
@@ -226,17 +198,46 @@
    },
    "outputs": [],
    "source": [
-    "%%time\n",
-    "\n",
-    "my_gb = myGB(n_estimators=250, max_depth=5, shrinkage=0.2, max_steps=50, max_features=15)\n",
-    "my_gb.fit(x_train, y_train)\n",
-    "y_predicted = my_gb.predict(x_test)\n",
+    "s = DecisionTree(is_classification=False, rsm=False, max_depth=25, min_samples_leaf=1, max_steps=None)\n",
+    "s.fit(x_train, y_train)\n",
+    "y_predicted = s.predict(x_test)\n",
     "print mse(y_test, y_predicted)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "#my_gb = myGB(n_estimators=10, max_depth=4, shrinkage=0.4, max_steps=50)\n",
+    "shinkgs = [0.01, 0.05, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7]\n",
+    "for sh in shinkgs:\n",
+    "    my_gb = myGB(n_estimators=100, max_depth=2, shrinkage=sh, max_steps=None, rsm=True)\n",
+    "    my_gb.fit(x_train, y_train)\n",
+    "    y_predicted = my_gb.predict(x_test)\n",
+    "    print mse(y_test, y_predicted), sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print my_gb._estimators[0]._root.predicate.value\n",
+    "print my_gb._estimators[1]._root.predicate.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -245,16 +246,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0648069481612\n",
-      "CPU times: user 10.4 s, sys: 0 ns, total: 10.4 s\n",
-      "Wall time: 10.4 s\n"
+      "13.5182019041\n",
+      "CPU times: user 69.2 ms, sys: 0 ns, total: 69.2 ms\n",
+      "Wall time: 69.7 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "\n",
-    "gb = GradientBoostingRegressor(n_estimators=250, max_depth=5)\n",
+    "gb = GradientBoostingRegressor(n_estimators=100, max_depth=2)\n",
     "gb.fit(x_train, y_train)\n",
     "y_predicted = gb.predict(x_test)\n",
     "print mse(y_test, y_predicted)"
