--- a/Boosting.ipynb
+++ b/Boosting.ipynb
@@ -206,11 +206,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.5381108554 0.01\n",
+      "8.34610579807 0.05\n",
+      "6.42223082392 0.1\n",
+      "10.1738235192 0.2\n",
+      "6.92110210662 0.3\n",
+      "11.5189516529 0.4\n",
+      "10.4684926136 0.5\n",
+      "16.9081119475 0.6\n",
+      "15.5220200217 0.7\n",
+      "CPU times: user 2min 41s, sys: 208 ms, total: 2min 41s\n",
+      "Wall time: 2min 41s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
@@ -237,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -246,15 +264,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.5182019041\n",
-      "CPU times: user 69.2 ms, sys: 0 ns, total: 69.2 ms\n",
-      "Wall time: 69.7 ms\n"
+      "6.76537292861\n",
+      "CPU times: user 63.4 ms, sys: 0 ns, total: 63.4 ms\n",
+      "Wall time: 63.5 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "gb = GradientBoostingRegressor(n_estimators=100, max_depth=2)\n",
+    "gb = GradientBoostingRegressor(n_estimators=100, max_depth=2, learning_rate=0.01)\n",
     "gb.fit(x_train, y_train)\n",
     "y_predicted = gb.predict(x_test)\n",
     "print mse(y_test, y_predicted)"
