--- a/Boosting.ipynb
+++ b/Boosting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -42,12 +42,12 @@
     "FILES = [\n",
     "        \"iris.txt\", \"bezdekIris.txt\", \"wine.txt\", \"bupa.txt\", \"housing.txt\", \"auto-mpg.txt\", \"spam\"\n",
     "        ]\n",
-    "FILE = \"housing.txt\""
+    "FILE = \"spam\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -192,16 +192,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.20819200832392001"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_gb = myGB(n_estimators=1, shrinkage=1)\n",
+    "my_gb.fit(x_train, y_train)\n",
+    "y_predict = my_gb.predict(x_test)\n",
+    "mse(y_test, y_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "s = DecisionTree(is_classification=False, rsm=False, max_depth=25, min_samples_leaf=1, max_steps=None)\n",
-    "s.fit(x_train, y_train)\n",
-    "y_predicted = s.predict(x_test)\n",
-    "print mse(y_test, y_predicted)"
+    "print my_gb._estimators[0]._root.predicate.value\n",
+    "print my_gb._estimators[1]._root.predicate.value\n",
+    "print my_gb._estimators[2]._root.predicate.value\n",
+    "#print my_gb._estimators[3].predict(X)"
    ]
   },
   {
@@ -215,64 +249,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.5381108554 0.01\n",
-      "8.34610579807 0.05\n",
-      "6.42223082392 0.1\n",
-      "10.1738235192 0.2\n",
-      "6.92110210662 0.3\n",
-      "11.5189516529 0.4\n",
-      "10.4684926136 0.5\n",
-      "16.9081119475 0.6\n",
-      "15.5220200217 0.7\n",
-      "CPU times: user 2min 41s, sys: 208 ms, total: 2min 41s\n",
-      "Wall time: 2min 41s\n"
+      "0.0768769291205\n",
+      "CPU times: user 2.16 s, sys: 0 ns, total: 2.16 s\n",
+      "Wall time: 2.16 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "\n",
-    "#my_gb = myGB(n_estimators=10, max_depth=4, shrinkage=0.4, max_steps=50)\n",
-    "shinkgs = [0.01, 0.05, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7]\n",
-    "for sh in shinkgs:\n",
-    "    my_gb = myGB(n_estimators=100, max_depth=2, shrinkage=sh, max_steps=None, rsm=True)\n",
-    "    my_gb.fit(x_train, y_train)\n",
-    "    y_predicted = my_gb.predict(x_test)\n",
-    "    print mse(y_test, y_predicted), sh"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print my_gb._estimators[0]._root.predicate.value\n",
-    "print my_gb._estimators[1]._root.predicate.value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.76537292861\n",
-      "CPU times: user 63.4 ms, sys: 0 ns, total: 63.4 ms\n",
-      "Wall time: 63.5 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "gb = GradientBoostingRegressor(n_estimators=100, max_depth=2, learning_rate=0.01)\n",
+    "gb = GradientBoostingRegressor(n_estimators=30, max_depth=3, learning_rate=0.1)\n",
     "gb.fit(x_train, y_train)\n",
     "y_predicted = gb.predict(x_test)\n",
     "print mse(y_test, y_predicted)"
