speed was improved. Sklearn was f**ked

--- a/Boosting.ipynb
+++ b/Boosting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
     "import matplotlib.pylab as pl\n",
     "import sklearn.cross_validation as cv\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier, DecisionTreeRegressor,export_graphviz\n",
     "from DecisionTree import DecisionTree\n",
     "from sklearn.metrics import mean_squared_error as mse\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +154,7 @@
    },
    "outputs": [],
    "source": [
-    "my_tree = DecisionTree(is_classification=False, rsm=True, max_steps=None)\n",
+    "my_tree = DecisionTree(is_classification=False, rsm=False, max_depth=3)\n",
     "my_tree.fit(x_train, y_train)\n",
     "y_predicted = my_tree.predict(x_test)\n",
     "print mse(y_test, y_predicted)"
@@ -168,12 +168,119 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "\n",
-    "sklearn_tree = DecisionTreeRegressor(splitter='random')\n",
+    "sklearn_tree = DecisionTreeRegressor(splitter='best', max_depth=3)\n",
     "sklearn_tree.fit(x_train, y_train)\n",
     "y_predicted = sklearn_tree.predict(x_test)\n",
     "print mse(y_test, y_predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from Impurity.RegressionImpurity import RegressionImpurity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = x_train[0:,48]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ri = RegressionImpurity()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x_sort = x.argsort()\n",
+    "x = x[x_sort]\n",
+    "y = y_train[x_sort]\n",
+    "v = 0.01\n",
+    "ri.calculate_node(y[x<=v])+ri.calculate_node(y[x>v])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.unique(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sum(x<=0.180471217255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def visualize_tree(tree, feature_names):\n",
+    "    \"\"\"Create tree png using graphviz.\n",
+    "\n",
+    "    Args\n",
+    "    ----\n",
+    "    tree -- scikit-learn DecsisionTree.\n",
+    "    feature_names -- list of feature names.\n",
+    "    \"\"\"\n",
+    "    with open(\"dt.dot\", 'w') as f:\n",
+    "        export_graphviz(tree, out_file=f,\n",
+    "                        feature_names=feature_names)\n",
+    "\n",
+    "    command = [\"dot\", \"-Tpng\", \"dt.dot\", \"-o\", \"dt.png\"]\n",
+    "    try:\n",
+    "        subprocess.check_call(command)\n",
+    "    except:\n",
+    "        exit(\"Could not run dot, ie graphviz, to \"\n",
+    "             \"produce visualization\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "visualize_tree(sklearn_tree, range(0,102))"
    ]
   },
   {
@@ -192,55 +299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.20819200832392001"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "my_gb = myGB(n_estimators=1, shrinkage=1)\n",
-    "my_gb.fit(x_train, y_train)\n",
-    "y_predict = my_gb.predict(x_test)\n",
-    "mse(y_test, y_predict)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": [
-    "print my_gb._estimators[0]._root.predicate.value\n",
-    "print my_gb._estimators[1]._root.predicate.value\n",
-    "print my_gb._estimators[2]._root.predicate.value\n",
-    "#print my_gb._estimators[3].predict(X)"
+    "#TODO защита от одинаковых данных"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -249,15 +319,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0768769291205\n",
-      "CPU times: user 2.16 s, sys: 0 ns, total: 2.16 s\n",
-      "Wall time: 2.16 s\n"
+      "0.0664961867195\n",
+      "CPU times: user 1min 19s, sys: 18.1 ms, total: 1min 19s\n",
+      "Wall time: 1min 19s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "gb = GradientBoostingRegressor(n_estimators=30, max_depth=3, learning_rate=0.1)\n",
+    "my_gb = myGB(n_estimators=200, max_depth=4, rsm=True, max_features=len(x_test[0]), shrinkage=0.1)\n",
+    "my_gb.fit(x_train, y_train)\n",
+    "y_predict = my_gb.predict(x_test)\n",
+    "print mse(y_test, y_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.067441320764\n",
+      "CPU times: user 16.8 s, sys: 20 ms, total: 16.8 s\n",
+      "Wall time: 16.9 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "gb = GradientBoostingRegressor(n_estimators=200, max_depth=4, learning_rate=0.1)\n",
     "gb.fit(x_train, y_train)\n",
     "y_predicted = gb.predict(x_test)\n",
     "print mse(y_test, y_predicted)"
